apps/jertest/api/svc.yml
---

apiVersion: "v1"
kind: Service
metadata:
  name: "apiserver"
  namespace: "jer-test"
spec:
  selector:
    app: "apiserver"
  type: "NodePort"
  ports:
  - protocol: "TCP"
    name: "apiport"
    port: 80
    targetPort: apiserver
