apps/jertest/api/ingress.yaml
---

apiVersion: "extensions/v1beta1"
kind: Ingress
metadata:
  name: apiserver
  namespace: "jer-test"
spec:
  rules:
  - host: api.jer.masterclass.peytz.dk
    http:
      paths:
      - backend:
          serviceName: apiserver
          servicePort: apiport
        path: /
